# nirantara

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cursor/rules/: architecture.mdc  c-style.mdc  project.mdc  security.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: architecture.md  enrollment.md
edge/: CMakeLists.txt
edge/include/edge/: buffer.h  sync.h
edge/src/: buffer.c  main.c  sync.c
enrollment/: CMakeLists.txt
enrollment/include/enrollment/: config.h  enrollment.h  http.h  kms.h
enrollment/src/: config.c  enrollment.c  http.c  kms.c  main.c
lib/nirantara-net/: CMakeLists.txt
lib/nirantara-net/include/nirantara/: internal.h  net.h
lib/nirantara-net/src/: enroll.c  keystore.c  mqtt.c  net.c  tls.c
tools/: setup_ubuntu.sh
tools/ca/: gen_ca.sh
